# dynamic-agent-platform

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  skills-lock.json  spec.md
.agents/skills/groq-api/: README.md  SKILL.md
.agents/skills/groq-api/references/: api-reference.md  audio.md  models.md  moderation.md  prompt-caching.md  reasoning.md  sdk.md  structured-outputs.md  tool-use.md  vision.md
.agents/skills/sdd-planning/: SKILL.md
.agents/skills/synapse-a2a/: SKILL.md
.agents/skills/synapse-a2a/references/: api.md  collaboration.md  commands.md  examples.md  features.md  file-safety.md  messaging.md  spawning.md
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application.yml
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx
frontend/src/constants/: agents.ts
frontend/src/flows/: AgentFlowNode.tsx  flowUtils.ts  types.ts
frontend/src/pages/: AgentsPage.tsx  HomePage.tsx  PlaygroundPage.tsx  ProjectsPage.tsx  StudioPage.tsx
frontend/src/pages/playground/: filePreview.tsx
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: main.py
orchestrator/app/a2a/: message.py
orchestrator/app/graph/: pipeline_graph.py
orchestrator/app/llm/: groq_client.py
orchestrator/app/mcp/: file_formatting.py  tools.py
orchestrator/app/schemas/: health.py  orchestration.py
orchestrator/app/services/: mock_orchestrator.py
orchestrator/tests/: test_main.py  test_tools.py
(+48 files in other folders)
