[project]
name = "agentflow-orchestrator"
version = "0.1.0"
description = "AgentFlow Studio Python orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "langgraph>=0.2.60",
    "pydantic>=2.9.0",
    "typing-extensions>=4.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
